@@ -9,7 +9,6 @@ import b12.trello.domain.boardUser.entity.BoardUser;
 import b12.trello.domain.boardUser.repository.BoardUserRepository;
 import b12.trello.domain.user.entity.User;
 import b12.trello.domain.user.repository.UserRepository;
-import b12.trello.global.exception.customException.BoardException;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,10 +16,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
-
-import static b12.trello.global.exception.errorCode.BoardErrorCode.*;
 
 
 @Slf4j
@@ -33,22 +29,17 @@ public class BoardService {
     private final UserRepository userRepository;
 
     public BoardResponseDto createBoard(BoardRequestDto boardRequestDto, User user) {
-        // 보드 생성
         Board board = Board.builder()
                 .boardName(boardRequestDto.getBoardName())
                 .boardInfo(boardRequestDto.getBoardInfo())
-                .manager(user)
                 .build();
-
         boardRepository.save(board);
 
-        // 보드를 생성한 유저를 매니저로 추가
         BoardUser boardUser = BoardUser.builder()
                 .board(board)
                 .user(user)
                 .boardUserRole(BoardUser.BoardUserRole.MANAGER)
                 .build();
-
         boardUserRepository.save(boardUser);
 
         return new BoardResponseDto(board);
@@ -57,13 +48,14 @@ public class BoardService {
     public BoardResponseDto findBoardById(User user, long boardId) {
         Board board = boardRepository.findByIdOrElseThrow(boardId);
         board.checkBoardDeleted();
-        boardUserRepository.verifyBoardUser(board.getId(), user.getId());
+        boardUserRepository.validateBoardUser(board.getId(), user.getId());
         return new BoardResponseDto(board);
     }
 
     public List<BoardResponseDto> findAll() {
         List<Board> boardlist = boardRepository.findAll();
         return boardlist.stream()
+                .filter(board -> board.getDeletedAt() == null)
                 .sorted(Comparator.comparing(Board::getCreatedAt).reversed())
                 .map(BoardResponseDto::new)
                 .collect(Collectors.toList());
@@ -72,7 +64,7 @@ public class BoardService {
     public BoardResponseDto modifyBoard(BoardRequestDto boardRequestDto, Long boardId, User user) {
         Board board = boardRepository.findByIdOrElseThrow(boardId);
         board.checkBoardDeleted();
-        validateManager(board, user);
+        boardUserRepository.validateBoardManager(board, user);
 
         board.updateBoard(boardRequestDto.getBoardName(), boardRequestDto.getBoardInfo());
         boardRepository.save(board);
@@ -81,14 +73,11 @@ public class BoardService {
     }
 
     @Transactional
-    // TODO: 소프트 딜리트로 변경하기
     public void deleteBoard(Long boardId, User user) {
         Board board = boardRepository.findByIdOrElseThrow(boardId);
-
-        validateManager(board, user);
-        board.updateDeletedAt();
-
-//        boardRepository.delete(board);
+        board.checkBoardDeleted();
+        boardUserRepository.validateBoardManager(board, user);
+        boardRepository.deleteById(boardId);
     }
 
     @Transactional
@@ -96,7 +85,7 @@ public class BoardService {
         Board board = boardRepository.findByIdOrElseThrow(boardInviteRequestDto.getBoardId());
 
         // 매니저만 초대할 수 있는지 확인
-        validateManager(board, inviter);
+        boardUserRepository.validateBoardManager(board, inviter);
 
         // 초대할 사용자의 역할 설정
         BoardUser.BoardUserRole role = boardInviteRequestDto.getBoardUserRole();
@@ -105,10 +94,7 @@ public class BoardService {
         User foundInvitedUser = userRepository.findByEmailOrElseThrow(boardInviteRequestDto.getUserEmail());
 
         // 이미 초대된 사용자인지 확인
-//        if (boardUserRepository.existsByBoardAndUser(board, foundInvitedUser)) {
-//            throw new IllegalArgumentException(USER_ALREADY_INVITED.getErrorDescription());
-//        }
-        boardUserRepository.verifyNotBoardUser(board.getId(), foundInvitedUser.getId());
+        boardUserRepository.validateNotBoardUser(board.getId(), foundInvitedUser.getId());
 
         // 초대된 사용자를 저장
         BoardUser boardUser = BoardUser.builder()
@@ -121,39 +107,30 @@ public class BoardService {
     }
 
     public List<String> findAllUserEmailList() {
-        return userRepository.findAll().stream()
+        return userRepository.findAllByDeletedAtIsNull().stream()
                 .map(User::getEmail)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 특정 유저가 참여 하고 있는 보드 조회
     public List<BoardResponseDto> findBoardListByUser(User user) {
         List<BoardUser> boardUsers = boardUserRepository.findByUser(user);
-        return boardUsers.stream()
-                .map(boardUser -> new BoardResponseDto(boardUser.getBoard()))
-                .collect(Collectors.toList());
+        return convertToBoardResponseDtoList(boardUsers);
     }
 
     // 특정 유저가 매니징 하고 있는 보드 조회
     public List<BoardResponseDto> findBoardListManagedByUser(User user) {
         List<BoardUser> boardUsers = boardUserRepository.findByUserAndBoardUserRole(user, BoardUser.BoardUserRole.MANAGER);
+        return convertToBoardResponseDtoList(boardUsers);
+    }
+
+    private List<BoardResponseDto> convertToBoardResponseDtoList(List<BoardUser> boardUsers) {
         return boardUsers.stream()
-                .map(boardUser -> new BoardResponseDto(boardUser.getBoard()))
+                .map(BoardUser::getBoard)
+                .filter(board -> board.getDeletedAt() == null)
+                .sorted(Comparator.comparing(Board::getCreatedAt).reversed())
+                .map(BoardResponseDto::new)
                 .collect(Collectors.toList());
     }
 
-    private void validateManager(Board board, User user) {
-        BoardUser boardUser = boardUserRepository.findByBoardIdAndUserIdOrElseThrow(board.getId(), user.getId());
-        if (boardUser.getBoardUserRole() != BoardUser.BoardUserRole.MANAGER) {
-            throw new BoardException(BOARD_MANAGER_ONLY);
-        }
-    }
-
-//    private boolean isManager(User user) {
-//        return boardUserRepository.existsByUserAndBoardUserRole(user, BoardUser.BoardUserRole.MANAGER);
-//    }
-//
-//    private boolean isBoardMember(Board board, User user) {
-//        return boardUserRepository.existsByBoardAndUser(board, user);
-//    }
 }
